feat: transfer to SHU website

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: SHU Cyberspace Security 101
-site_url: https://ZJU-Turing.github.io/TuringCourses/
+site_url: https://github.com/LuminolT/SHU-Cyberspace-Security-101
 site_description: SHU Cyberspace Security 101
 repo_name: LuminolT/SHU-Cyberspace-Security-101
 repo_url: https://github.com/LuminolT/SHU-Cyberspace-Security-101
