update: settings transfer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: SHU Cyberspace Security 101
-site_url: https://github.com/LuminolT/SHU-Cyberspace-Security-101
+site_url: https://shu-cake1salie.github.io
 site_description: SHU Cyberspace Security 101
-repo_name: LuminolT/SHU-Cyberspace-Security-101
-repo_url: https://github.com/LuminolT/SHU-Cyberspace-Security-101
+repo_name: SHU-Cyberspace-Security-101
+repo_url: https://github.com/shu-cake1salie/SHU-Cyberspace-Security-101
 edit_uri: tree/master/docs
 copyright: Copyright &copy; 2023 SHU-Cake1salie
 
