--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Install TuringPlugins
         run: |
-          git clone https://github.com/ZJU-Turing/TuringPlugins.git
-          cd TuringPlugins
+          cd security-101-plugins
           pip install -e .
           cd ..
       - run: mkdocs gh-deploy --force
