--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,9 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Install security-101-plugins
         run: |
-          git clone https://github.com/LuminolT/security-101-plugins.git security-101-plugins-tmp
-          cd security-101-plugins-tmp
+          git submodule sync
+          git submodule update --remote
+          cd security-101-plugins
           pip install -e .
           cd ..
       - run: mkdocs gh-deploy --force
