--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,8 +57,8 @@ plugins:
   - heti:
       extra_skipped_class:
         - arithmatex
-  - turing_changelog
-  - turing_contributors
+  - cake_changelog
+  - cake_contributors
 
 extra_css:
   - https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,300i,400,400i,700,700i&display=fallback
