--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,8 +16,23 @@ nav:
   - 计算机课程:
       - 1_course_computer/index.md
       - 高级语言程序设计: 1_course_computer/08304135_ALP/index.md
+      - 程序设计(C语言): 1_course_computer/00864088_C/index.md
+      - 面向对象程序设计 A: 1_course_computer/08305138_OOP/index.md
+      - 离散数学: 1_course_computer/08305152_DM/index.md
+      - 计算机组成原理与体系结构 A: 1_course_computer/08695028_CS/index.md
+      - 矩阵代数与应用 A: 1_course_computer/08695029_MT/index.md
+      - 数据结构: 1_course_computer/08305009_DS/index.md
+      - 计算机网络 A: 1_course_computer/08305142_CN/index.md
+      - 智能系统控制: 1_course_computer/08695008_IC/index.md
+      - 操作系统: 1_course_computer/08305011_OS/index.md
+      - 数据库原理: 1_course_computer/08A65001_DB/index.md
   - 网安专业课:
       - 2_course_security/index.md
+      - 计算机安全与保密技术: 2_course_security/08A65002_SEC/index.md
+      - 信息安全技术: 2_course_security/08A65003_CRYPTO/index.md
+      - 物联网安全: 2_course_security/08A66005_IOTS/index.md
+      - 网络入侵检测: 2_course_security/08A66006_NID/index.md
+      - 数据隐私保护: 2_course_security/08A66007_DPP/index.md
   - 暑期实训:
       - 3_course_summer/index.md
   - 安全攻防:
